--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html lang="en" >
 <head>
   <meta charset="UTF-8">
-  <title>CodePen - COLORON GAME</title>
+  <title>CodePen - Next Color</title>
   <meta charset="utf-8">
 <meta http-equiv="x-ua-compatible" content="ie=edge">
 <title>COLORON GAME: inspiring developers to use SVG Animations, ES6 and Flexbox</title>
